--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,6 +30,7 @@ li:hover {
   background-color: lightseagreen;
   cursor: pointer;
   color: white;
+  box-shadow: 0px 0px 12px black;
 }
 .postTitle {
   font-weight: 300;
@@ -41,9 +42,10 @@ li:hover {
   font-style: italic;
 }
 .addPost {
-  border: 1px solid lightgrey;
+  border: 1px solid teal;
   border-radius: 15px;
   padding: 15px;
+  background-color: lightcyan;
 }
 .icon_delete {
   width: 30px;
@@ -63,14 +65,15 @@ li:hover {
   font-weight: 300;
 }
 .post-labels {
-  font-size: 10px;
+  font-size: 12px;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 300;
   background-color: lightseagreen;
   color: white;
-  width: 100%;
+  width: 20%;
   padding: 2px;
+  padding-left: 5px;
 }
 .post-labels-list {
   font-size: 10px;
@@ -92,4 +95,22 @@ li:hover {
   font-size: 12px !important;
   border-radius: 0px !important;
   background-color: teal !important;
+  border: none !important;
+}
+.error {
+  border: 2px solid red;
+  border-radius: 5px;
+  margin: 5px 0;
+  padding: 5px;
+  background-color: lightcyan;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  color: red;
+}
+.show-error {
+  display: block;
+}
+.hide-error {
+  display: none;
 }
